Fixed tests that broke because of adding APIs as param for searching services.